<resources>
    <string name="app_name">OnePlayer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_music">音乐</string>
    <string name="deep_load">深度扫描</string>
    <string name="check_update">检查更新</string>
    <string name="print_log">打印日志</string>
    <string name="version_info">版本信息</string>
    <string name="exit_app">退出应用</string>
    <string name="init_time">0:00</string>
    <string name="singer_name">歌手名</string>
    <string name="song_name">歌名</string>
    <string name="album_name">专辑名</string>
    <string name="singer">歌手</string>
    <string name="song">歌曲</string>
    <string name="album">专辑</string>
    <string name="deepload_path">扫描路径</string>
    <string name="deepload_msg">扫描信息</string>
    <string name="deepload_begin">开始扫描</string>
    <string name="manager">管理员</string>
    <string name="songs_number">几首歌曲</string>
    <string name="color_select">主题换肤</string>
    <string name="color_red">红%1$d</string>
    <string name="color_green">绿%1$d</string>
    <string name="color_blue">蓝%1$d</string>
    <string name="color_alpha">透明度%1$d</string>
    <string name="radius">高斯模糊度%1$d</string>
    <string name="color_red_tag">redTag</string>
    <string name="color_green_tag">greenTag</string>
    <string name="color_blue_tag">blueTag</string>
    <string name="alpha_tag">alphaTag</string>
    <string name="radius_tag">radiusTag</string>
    <string name="apply_theme">保存当前配置</string>
    <string name="save_sound_effects">保存音效配置</string>
    <string name="saved_sound_effects">音效已保存</string>
    <string name="preview">效果预览</string>
    <string name="exit">退出</string>
    <string name="test">测试</string>
    <string name="sound_effect">音效调节</string>
    <string name="init_status">Status:</string>
    <string name="action_settings">Settings</string>
    <string name="StartEcho">Start</string>
    <string name="StopEcho">Stop</string>
    <string name="GetParam">Get Param</string>
    <string name="NeedRecordAudioPermission">"This sample needs RECORD_AUDIO permission"</string>
    <string name="equalizer">均衡器</string>
    <string name="frequency">%1$dhz</string>
    <string name="decibel">%1$ddb</string>
    <string name="bass">重低音</string>
    <string name="value">%1$d</string>
    <string name="preset">音场</string>
    <string name="virtualizer">虚拟等级</string>
    <string name="decay">衰减时间</string>
    <string name="decayHF">高频衰减时间</string>
    <string name="timeMeasurement">%1$dms</string>
    <string name="density">模态密度</string>
    <string name="diffusion">扩散系数</string>
    <string name="reflectionsDelay">反射延迟</string>
    <string name="reflectionLevel">反射等级</string>
    <string name="reverbDelay">混响延迟</string>
    <string name="reverbLevel">混响等级</string>
    <string name="roomHFLevel">高频房间等级</string>
    <string name="roomLevel">房间等级</string>
    <string name="send">发送</string>
    <string name="send_content">待发送内容</string>
    <string name="send_url">发送地址</string>
    <string name="sound_effect_switch">声音效果总开关</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="searchJson">{"queryType":"doSearch","keyWord":"%1$s"}</string>
    <string name="local_music">本地音乐</string>
    <string name="songnumber">首歌曲</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>

</resources>
