<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="peacemaker.oneplayer.entity.OneConfig"/>
        <import type="peacemaker.oneplayer.entity.MusicState"/>
        <variable
            name="oneConfig"
            type="OneConfig" />
        <variable
            name="musicState"
            type="MusicState"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <android.support.v7.widget.Toolbar
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:titleTextColor="@color/WHITE"
                    app:title="@string/color_select"
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@{oneConfig.themeColor}" >
                </android.support.v7.widget.Toolbar>

                <RelativeLayout
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:layout_below="@id/toolbar"
                    android:id="@+id/preview_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textAlignment="center"
                        android:id="@+id/color_preview"
                        android:background="@{oneConfig.themeColor}"
                        android:textColor="@color/WHITE"
                        android:text="@string/preview"
                        android:layout_width="150dp"
                        android:layout_height="150dp" />
                    <ImageView
                        android:scaleType="fitCenter"
                        android:layout_toEndOf="@id/color_preview"
                        android:layout_toRightOf="@id/color_preview"
                        android:blurBitmap="@{musicState.currentBitmap}"
                        android:blurRadius="@{oneConfig.blurRadius}"
                        android:layout_width="150dp"
                        android:layout_height="150dp" />


                </RelativeLayout>
                <SeekBar
                    android:max="255"
                    android:layout_below="@id/preview_layout"
                    android:id="@+id/one_red_color_seekbar"
                    android:layout_width="280dp"
                    android:layout_height="50dp" />
                <SeekBar
                    android:max="255"
                    android:layout_below="@id/one_red_color_seekbar"
                    android:id="@+id/one_green_color_seekbar"
                    android:layout_width="280dp"
                    android:layout_height="50dp" />
                <SeekBar
                    android:max="255"
                    android:layout_below="@id/one_green_color_seekbar"
                    android:id="@+id/one_blue_color_seekbar"
                    android:layout_width="280dp"
                    android:layout_height="50dp" />
                <SeekBar
                    android:max="255"
                    android:layout_below="@id/one_blue_color_seekbar"
                    android:id="@+id/one_alpha_seekbar"
                    android:layout_width="280dp"
                    android:layout_height="50dp" />
                <SeekBar
                    android:max="24"
                    android:layout_below="@id/one_alpha_seekbar"
                    android:id="@+id/one_radius_seekbar"
                    android:layout_width="280dp"
                    android:layout_height="50dp" />
                <TextView
                    android:displayValue="@{oneConfig.redColor}"
                    android:tag="@string/color_red_tag"
                    android:textColor="@color/BLACK"
                    android:textSize="20sp"
                    android:text="@string/color_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/one_red_color_seekbar"
                    android:layout_toRightOf="@+id/one_red_color_seekbar"
                    android:layout_toEndOf="@+id/one_red_color_seekbar"
                    android:id="@+id/red_tint" />
                <TextView
                    android:displayValue="@{oneConfig.greenColor}"
                    android:tag="@string/color_green_tag"
                    android:textColor="@color/BLACK"
                    android:textSize="20sp"
                    android:text="@string/color_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/one_green_color_seekbar"
                    android:layout_toRightOf="@+id/one_green_color_seekbar"
                    android:layout_toEndOf="@+id/one_green_color_seekbar"
                    android:id="@+id/green_tint" />
                <TextView
                    android:displayValue="@{oneConfig.blueColor}"
                    android:tag="@string/color_blue_tag"
                    android:textColor="@color/BLACK"
                    android:textSize="20sp"
                    android:text="@string/color_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/blue_tint"
                    android:layout_alignTop="@+id/one_blue_color_seekbar"
                    android:layout_toRightOf="@+id/one_blue_color_seekbar"
                    android:layout_toEndOf="@+id/one_blue_color_seekbar" />
                <TextView
                    android:displayValue="@{oneConfig.alphaColor}"
                    android:tag="@string/alpha_tag"
                    android:textColor="@color/BLACK"
                    android:textSize="20sp"
                    android:text="@string/alpha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/alpha_tint"
                    android:layout_alignTop="@+id/one_alpha_seekbar"
                    android:layout_toRightOf="@+id/one_alpha_seekbar"
                    android:layout_toEndOf="@+id/one_alpha_seekbar" />
                <TextView
                    android:displayValue="@{oneConfig.blurRadius}"
                    android:tag="@string/radius_tag"
                    android:textColor="@color/BLACK"
                    android:textSize="20sp"
                    android:text="@string/radius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radius_tint"
                    android:layout_alignTop="@+id/one_radius_seekbar"
                    android:layout_toRightOf="@+id/one_radius_seekbar"
                    android:layout_toEndOf="@+id/one_radius_seekbar" />
                <Button
                    android:layout_marginRight="20dp"
                    android:padding="20dp"
                    android:id="@+id/apply_button"
                    android:textColor="@{oneConfig.themeColor}"
                    android:background="@color/WHITE"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/one_radius_seekbar"
                    android:text="@string/apply_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </ScrollView>



    </RelativeLayout>
</layout>