<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/decay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/decay_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="10dp"
            android:text="@string/decay" />
        <SeekBar
            android:id="@+id/decay_seekbar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/decay_text" />

        <TextView
            android:id="@+id/decay_value_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/decay_seekbar"
            android:text="@string/timeMeasurement" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/decay"
        android:id="@+id/decayHF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/decayHF_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="10dp"
            android:text="@string/decayHF" />
        <SeekBar
            android:id="@+id/decayHF_seekbar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/decayHF_text" />

        <TextView
            android:id="@+id/decayHF_value_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/decayHF_seekbar"
            android:text="@string/timeMeasurement" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/decayHF"
        android:id="@+id/density"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/density_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="10dp"
            android:text="@string/density" />
        <SeekBar
            android:id="@+id/density_seekbar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/density_text" />

        <TextView
            android:id="@+id/density_value_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/density_seekbar"
            android:text="@string/value" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/density"
        android:id="@+id/diffusion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/diffusion_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="10dp"
            android:text="@string/diffusion" />
        <SeekBar
            android:id="@+id/diffusion_seekbar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/diffusion_text" />

        <TextView
            android:id="@+id/diffusion_value_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/diffusion_seekbar"
            android:text="@string/value" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/diffusion"
        android:id="@+id/reflectionDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/reflectionDelay_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="10dp"
            android:text="@string/reflectionsDelay" />
        <SeekBar
            android:id="@+id/reflectionDelay_seekbar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/reflectionDelay_text" />

        <TextView
            android:id="@+id/reflectionDelay_value_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/reflectionDelay_seekbar"
            android:text="@string/timeMeasurement" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/reflectionDelay"
        android:id="@+id/reflectionLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/reflectionLevel_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="10dp"
            android:text="@string/reflectionLevel" />
        <SeekBar
            android:id="@+id/reflectionLevel_seekbar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/reflectionLevel_text" />

        <TextView
            android:id="@+id/reflectionLevel_value_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/reflectionLevel_seekbar"
            android:text="@string/value" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/reflectionLevel"
        android:id="@+id/reverbDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/reverbDelay_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="10dp"
            android:text="@string/reverbDelay" />
        <SeekBar
            android:id="@+id/reverbDelay_seekbar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/reverbDelay_text" />

        <TextView
            android:id="@+id/reverbDelay_value_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/reverbDelay_seekbar"
            android:text="@string/timeMeasurement" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/reverbDelay"
        android:id="@+id/reverbLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/reverbLevel_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="10dp"
            android:text="@string/reverbLevel" />
        <SeekBar
            android:id="@+id/reverbLevel_seekbar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/reverbLevel_text" />

        <TextView
            android:id="@+id/reverbLevel_value_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/reverbLevel_seekbar"
            android:text="@string/value" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/reverbLevel"
        android:id="@+id/roomLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/roomLevel_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="10dp"
            android:text="@string/roomLevel" />
        <SeekBar
            android:id="@+id/roomLevel_seekbar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/roomLevel_text" />

        <TextView
            android:id="@+id/roomLevel_value_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/roomLevel_seekbar"
            android:text="@string/value" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/roomLevel"
        android:id="@+id/roomHFLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/roomHFLevel_text"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="10dp"
            android:text="@string/roomHFLevel" />
        <SeekBar
            android:id="@+id/roomHFLevel_seekbar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/roomHFLevel_text" />

        <TextView
            android:id="@+id/roomHFLevel_value_text"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/roomHFLevel_seekbar"
            android:text="@string/value" />
    </RelativeLayout>



</RelativeLayout>