<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="peacemaker.oneplayer.entity.OneConfig"/>
        <variable
            name="oneConfig"
            type="OneConfig" />
    </data>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.design.widget.AppBarLayout
                    android:id="@+id/id_appbarlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.Toolbar
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                        app:layout_scrollFlags="scroll|enterAlways"
                        app:titleTextColor="@color/WHITE"
                        app:title="@string/sound_effect"
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@{oneConfig.themeColor}" >
                    </android.support.v7.widget.Toolbar>
                </android.support.design.widget.AppBarLayout>
                <RelativeLayout
                    android:visibility="gone"
                    android:layout_below="@id/id_appbarlayout"
                    android:id="@+id/sound_effects_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/sound_effect_switch_hint"
                        android:text="@string/sound_effect_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Switch
                        android:checked="true"
                        android:textOff="@string/close"
                        android:textOn="@string/open"
                        android:id="@+id/sound_effect_switch"
                        android:layout_toEndOf="@id/sound_effect_switch_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <!--<ImageButton-->
                    <!--android:id="@+id/close_button"-->
                    <!--android:layout_alignParentEnd="true"-->
                    <!--android:scaleType="fitXY"-->
                    <!--android:background="@color/TOTAL_TRANSPARENT"-->
                    <!--android:src="@drawable/close_black"-->
                    <!--android:layout_width="30dp"-->
                    <!--android:layout_height="30dp" />-->
                <ScrollView
                    android:layout_below="@id/sound_effects_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <EditText
                            android:visibility="gone"
                            android:hint="@string/send_content"
                            android:id="@+id/content_edit_text"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content" />
                        <EditText
                            android:visibility="gone"
                            android:hint="@string/send_url"
                            android:layout_toEndOf="@+id/content_edit_text"
                            android:id="@+id/address_edit_text"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content" />
                        <Button
                            android:visibility="gone"
                            android:onClick="sendUrl"
                            android:text="@string/send"
                            android:layout_toEndOf="@+id/address_edit_text"
                            android:id="@+id/send_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_below="@+id/send_button"
                            android:padding="10dp"
                            android:id="@+id/equalizer_field_tint"
                            android:text="@string/equalizer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <android.support.design.widget.TabLayout
                            android:layout_below="@+id/equalizer_field_tint"
                            app:tabIndicatorColor="@color/colorPrimary"
                            app:tabSelectedTextColor="@color/BLACK"
                            app:tabGravity="fill"
                            android:id="@+id/id_tablayout"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"/>
                        <LinearLayout
                            android:layout_below="@+id/id_tablayout"
                            android:orientation="vertical"
                            android:layout_centerHorizontal="true"
                            android:id="@+id/equailizer_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_below="@id/equailizer_field"
                            android:id="@+id/bassboost_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_below="@id/bassboost_field"
                            android:id="@+id/presetreverb_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_below="@id/presetreverb_field"
                            android:id="@+id/virtualizer_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_below="@id/virtualizer_field"
                            android:id="@+id/environmental_reverb_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </LinearLayout>
                        <Button
                            android:background="@color/WHITE"
                            android:layout_below="@id/environmental_reverb_field"
                            android:onClick="saveEffect"
                            android:id="@+id/save_sound_effects_button"
                            android:text="@string/save_sound_effects"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>

                </ScrollView>
    </RelativeLayout>


</layout>