<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.CardView
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="#ffffff"
        android:layout_width="300dp" android:layout_height="150dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textColor="#000000"
                android:textSize="20sp"
                android:id="@+id/search_info_text"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/deepload_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_below="@id/search_info_text"
                android:id="@+id/search_path_text"
                android:maxLines="2"
                android:layout_marginLeft="20dp"
                android:text="@string/deepload_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button

                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/search_stop_button"
                android:background="#00000000"
                android:textColor="#009688"
                android:text="@string/deepload_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
